more progress on challenge service class